// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attach.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-design-popup-attach"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      点击查看我的父元素(CSSSelector)
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      点击查看我的父元素(Function)
    </button>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    Hover me
  </button>
</DocumentFragment>
`;

exports[`controlled.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    一直显示
  </button>
</DocumentFragment>
`;

exports[`destroy.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    Hover me
  </button>
</DocumentFragment>
`;

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-is-disabled t-button t-button--theme-primary t-button--variant-base"
  >
    Hover me
  </button>
</DocumentFragment>
`;

exports[`overlay-style.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    click我试试
  </button>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
  >
    根据 trigger 元素定制 overlayStyle
  </button>
</DocumentFragment>
`;

exports[`placements.jsx 1`] = `
<DocumentFragment>
  <div
    style="margin: 0px auto; width: 500px; height: 260px; position: relative;"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: absolute; top: 0px; left: 42%;"
    >
      top
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: absolute; top: 0px; left: 70px;"
    >
      top-left
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: absolute; top: 0px; right: 70px;"
    >
      top-right
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: absolute; bottom: 0px; left: 42%;"
    >
      bottom
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: absolute; bottom: 0px; left: 70px; width: 120px;"
    >
      bottom-left
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: absolute; bottom: 0px; right: 70px;"
    >
      bottom-right
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: absolute; left: 0px; top: 42%;"
    >
      left
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: absolute; left: 0px; top: 50px;"
    >
      left-top
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: absolute; left: 0px; bottom: 50px;"
    >
      left-bottom
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: absolute; right: 0px; top: 42%;"
    >
      right
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: absolute; right: 0px; top: 50px;"
    >
      right-top
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: absolute; right: 0px; bottom: 50px;"
    >
      right-bottom
    </button>
  </div>
</DocumentFragment>
`;

exports[`triggers.jsx 1`] = `
<DocumentFragment>
  <div
    style="display: flex; align-items: center;"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      悬浮时触发（默认）
    </button>
    <div
      class="t-input"
      style="width: 200px; margin: 0px 16px 10px 0px;"
    >
      <input
        class="t-input__inner"
        placeholder="获得焦点时触发"
        value=""
      />
    </div>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      点击时触发
    </button>
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
    >
      右击时触发
    </button>
  </div>
</DocumentFragment>
`;
